    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:id="@+id/editText"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:id="@+id/button"
            android:layout_toStartOf="@+id/button7" />

        <Button
            android:text="@string/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button"
            android:layout_toEndOf="@+id/button"
            android:id="@+id/button4" />

        <Button
            android:text="@string/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_alignParentStart="true"
            android:id="@+id/button6" />

        <Button
            android:text="@string/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button4"
            android:layout_toEndOf="@+id/button6"
            android:id="@+id/button7" />

        <Button
            android:text="@string/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button5"
            android:layout_alignStart="@+id/button5"
            android:id="@+id/button8" />

        <Button
            android:text="@string/seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button6"
            android:layout_toStartOf="@+id/button7"
            android:id="@+id/button9" />

        <Button
            android:text="@string/eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button7"
            android:layout_toStartOf="@+id/button8"
            android:id="@+id/button10" />

        <Button
            android:text="@string/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button10"
            android:layout_toEndOf="@+id/button10"
            android:id="@+id/button12" />

        <Button
            android:text="@string/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            android:layout_alignBaseline="@+id/button4"
            android:layout_alignBottom="@+id/button4"
            android:layout_toEndOf="@+id/button4" />

        <Button
            android:text="@string/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button13"
            android:layout_below="@+id/button9"
            android:layout_alignParentStart="true" />

            <Button
            android:text="@string/equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button10"
            android:layout_alignEnd="@+id/button12"
            android:id="@+id/button15" />

        <Button
            android:text="@string/del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button5"
            android:layout_toEndOf="@+id/button8"
            android:id="@+id/button16" />

        <Button
            android:text="@string/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button17"
            android:layout_toEndOf="@+id/button12"
            android:id="@+id/button18" />

        <Button
            android:text="@string/subtraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button18"
            android:layout_toEndOf="@+id/button15"
            android:id="@+id/button19" />

        <Button
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button19"
            android:layout_toEndOf="@+id/button15"
            android:id="@+id/button20" />

        <Button
            android:text="@string/division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button17"
            android:layout_alignBaseline="@+id/button8"
            android:layout_alignBottom="@+id/button8"
            android:layout_toEndOf="@+id/button8" />

            <Button
                android:text="@string/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button9"
                android:layout_toStartOf="@+id/button15"
                android:id="@+id/0" />

    </RelativeLayout>

